--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,5 @@ RoxygenNote: 7.1.1
 Imports: 
     fixest (>= 0.9.0),
     ggplot2 (>= 2.0.0)
+URL: https://github.com/grantmcdermott/ggiplot
+BugReports: https://github.com/grantmcdermott/ggiplot/issues
