--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,5 +19,6 @@ RoxygenNote: 7.1.2
 Imports: 
     fixest (>= 0.9.0),
     ggplot2 (>= 2.0.0)
-URL: https://github.com/grantmcdermott/ggiplot
+URL: https://github.com/grantmcdermott/ggiplot,
+    http://grantmcdermott.com/ggiplot
 BugReports: https://github.com/grantmcdermott/ggiplot/issues
