--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggiplot
 Title: ggplot2 Equivalents of fixest::iplot()
-Version: 0.0.0.9000
+Version: 0.0.1
 Authors@R: 
     person(given = "Grant",
            family = "McDermott",
@@ -16,9 +16,10 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Depends: 
+    ggplot2 (>= 2.0.0)
 Imports: 
     fixest (>= 0.9.0),
-    ggplot2 (>= 2.0.0)
 URL: https://github.com/grantmcdermott/ggiplot,
     http://grantmcdermott.com/ggiplot
 BugReports: https://github.com/grantmcdermott/ggiplot/issues
