--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,11 +15,12 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Depends: 
     ggplot2 (>= 2.0.0)
 Imports: 
     fixest (>= 0.9.0),
+    scales
 URL: https://github.com/grantmcdermott/ggiplot,
     http://grantmcdermott.com/ggiplot
 BugReports: https://github.com/grantmcdermott/ggiplot/issues
