--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Depends:
     ggplot2 (>= 2.0.0)
 Imports: 
     fixest (>= 0.9.0),
+    utils,
     scales,
     marginaleffects (>= 0.6.0)
 URL: https://github.com/grantmcdermott/ggiplot,
