--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,11 +16,15 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
+URL: https://github.com/grantmcdermott/ggiplot, http://grantmcdermott.com/ggiplot
+BugReports: https://github.com/grantmcdermott/ggiplot/issues
 Depends: 
     ggplot2 (>= 2.0.0)
 Imports: 
     fixest (>= 0.9.0),
     scales
-URL: https://github.com/grantmcdermott/ggiplot,
-    http://grantmcdermott.com/ggiplot
-BugReports: https://github.com/grantmcdermott/ggiplot/issues
+Suggests: 
+    tinytest,
+    tinyviztest
+Remotes: 
+    vincentarelbundock/tinyviztest
