--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,19 +15,19 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
 URL: https://github.com/grantmcdermott/ggiplot, http://grantmcdermott.com/ggiplot
 BugReports: https://github.com/grantmcdermott/ggiplot/issues
 Depends: 
     ggplot2 (>= 2.0.0)
 Imports: 
     fixest (>= 0.9.0),
-    scales
-    utils,
     scales,
+    utils,
     marginaleffects (>= 0.6.0)
 Suggests: 
-    tinytest,
+    tinytest (>= 1.4.0),
     tinyviztest
-Remotes: 
+Remotes:
+		markvanderloo/tinytest/pkg,
     vincentarelbundock/tinyviztest
