Update pkgdown GHA

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: http://grantmcdermott.com/ggiplot, https://github.com/grantmcdermott/ggiplot
+url: http://grantmcdermott.com/ggiplot/
 template:
   bootstrap: 5
 
