--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
-URL: https://github.com/grantmcdermott/ggiplot, http://grantmcdermott.com/ggiplot
+URL: http://grantmcdermott.com/ggiplot/
 BugReports: https://github.com/grantmcdermott/ggiplot/issues
 Depends: 
     ggplot2 (>= 2.0.0)
