Fix GA workflow link
- Also don't need dev version of tinytest anymore

--- a/.github/workflows/check-release.yaml
+++ b/.github/workflows/check-release.yaml
@@ -27,10 +27,7 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
 
-      - name: tinytest dev
-        run: Rscript -e "remotes::install_github('markvanderloo/tinytest/pkg')"
-
-      - name: tinyviztest dev
-        run: Rscript -e "remotes::install_github('vincentarelbundock/tinyviztest')"
+      - name: tinysnapshot dev
+        run: Rscript -e "remotes::install_github('vincentarelbundock/tinysnapshot')"
 
       - uses: r-lib/actions/check-r-package@v2
