--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 .httr-oauth
 .DS_Store
 .Renviron
+.vscode
 docs
 inst/doc
 inst/tinytest/_tinysnapshot_review
 inst/tinytest/_tinysnapshot_MacOS
 README.html
-launch.json
