--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: http://grantmcdermott.com/ggiplot/
 BugReports: https://github.com/grantmcdermott/ggiplot/issues
+Remotes: lrberge/fixest
 Depends: 
     ggplot2 (>= 2.2.0)
 Imports: 
