--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
     person(given   = "Grant",
            family  = "McDermott",
            role    = c("aut", "cre"),
-           email   = "grantmcd@uoregon.edu",
+           email   = "gmcd@amazon.com",
            comment = c(ORCID = "0000-0001-7883-8573")),
            
     person(given   = "Laurent",
