--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggiplot
-Title: ggplot2 equivalents of fixest's iplot() and coefplot() functions.
-Version: 0.0.1.9010
+Title: ggplot2 equivalents of fixest's `iplot` and `coefplot` functions
+Version: 0.0.1.9011
 Authors@R: 
     c(person(given   = "Grant",
              family  = "McDermott",
@@ -12,16 +12,16 @@ Authors@R:
             role    = "ctb",
             email   = "laurent.berge@u-bordeaux.fr")
     )
-Description: Provides ggplot2 equivalents of fixest::iplot() and fixest::coefplot
-    for producing nice "event study" and coefficient plots, respectiely. Enables 
+Description: Provides ggplot2 equivalents of fixest::iplot and fixest::coefplot
+    for producing nice "event study" and coefficient plots, respectively. Enables 
     some additional functionality and convenience features, including grouped
-    multi-fixest object facetting and programatic updating of existing plots
-    (e.g. themes and aesthetics).
+    multi-fixest object faceting and programatic updating of existing plots
+    (e.g., themes and aesthetics).
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.2.3.9000
 URL: http://grantmcdermott.com/ggiplot/
 BugReports: https://github.com/grantmcdermott/ggiplot/issues
 Remotes: lrberge/fixest
