--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: ggiplot
-Title: ggplot2 equivalents of fixest's `iplot` and `coefplot` functions
-Version: 0.0.1.9011
+Package: ggfixest
+Title: Dedicated ggplot2 methods for fixest objects
+Version: 0.0.3
 Authors@R: 
     c(person(given   = "Grant",
              family  = "McDermott",
@@ -12,9 +12,9 @@ Authors@R:
             role    = "ctb",
             email   = "laurent.berge@u-bordeaux.fr")
     )
-Description: Provides ggplot2 equivalents of fixest::iplot and fixest::coefplot
-    for producing nice "event study" and coefficient plots, respectively. Enables 
-    some additional functionality and convenience features, including grouped
+Description: Provides ggplot2 equivalents of fixest::coefplot and fixest::iplot,
+    for producing nice coefficient plots and interactions plots. Enables some
+    additional functionality and convenience features, including grouped
     multi-fixest object faceting and programatic updating of existing plots
     (e.g., themes and aesthetics).
 License: MIT + file LICENSE
@@ -22,13 +22,11 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3.9000
-URL: http://grantmcdermott.com/ggiplot/
-BugReports: https://github.com/grantmcdermott/ggiplot/issues
-Remotes: lrberge/fixest
+URL: http://grantmcdermott.com/ggfixest/
+BugReports: https://github.com/grantmcdermott/ggfixest/issues
 Depends: 
     ggplot2 (>= 2.2.0)
 Imports: 
-    fixest (>= 0.11.2),
     dreamerr,
     ggh4x,
     scales,
