--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ RoxygenNote: 7.2.3.9000
 URL: http://grantmcdermott.com/ggfixest/
 BugReports: https://github.com/grantmcdermott/ggfixest/issues
 Depends: 
-    ggplot2 (>= 2.2.0)
+    ggplot2 (>= 2.2.0),
+    fixest (>= 0.11.2)
 Imports: 
     dreamerr,
     ggh4x,
