--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ggfixest
-Title: Dedicated ggplot2 methods for fixest objects
+Title: Dedicated ggplot2 Methods for Fixest Objects
 Version: 0.0.3.9001
 Authors@R: 
     c(person(given   = "Grant",
