--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ggfixest
-Title: Dedicated ggplot2 Methods for Fixest Objects
+Title: Dedicated 'ggplot2' Methods for 'fixest' Objects
 Version: 0.1.0
 Date: 2023-12-12
 Authors@R: 
@@ -13,10 +13,10 @@ Authors@R:
             role    = "ctb",
             email   = "laurent.berge@u-bordeaux.fr")
     )
-Description: Provides ggplot2 equivalents of fixest::coefplot and fixest::iplot,
-    for producing nice coefficient plots and interactions plots. Enables some
+Description: Provides 'ggplot2' equivalents of fixest::coefplot() and fixest::iplot(),
+    for producing nice coefficient plots and interaction plots. Enables some
     additional functionality and convenience features, including grouped
-    multi-fixest object faceting and programmatic updating of existing plots
+    multi-'fixest' object faceting and programmatic updating of existing plots
     (e.g., themes and aesthetics).
 License: GPL-3
 Encoding: UTF-8
