--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Authors@R:
 Description: Provides 'ggplot2' equivalents of fixest::coefplot() and fixest::iplot(),
     for producing nice coefficient plots and interaction plots. Enables some
     additional functionality and convenience features, including grouped
-    multi-'fixest' object faceting and programmatic updating of existing plots
+    multi-'fixest' object faceting and programmatic updates to existing plots
     (e.g., themes and aesthetics).
 License: GPL-3
 Encoding: UTF-8
