--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: http://grantmcdermott.com/ggfixest/
+URL: https://grantmcdermott.com/ggfixest/
 BugReports: https://github.com/grantmcdermott/ggfixest/issues
 Depends: 
     ggplot2 (>= 2.2.0),
