--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggfixest
 Title: Dedicated 'ggplot2' Methods for 'fixest' Objects
-Version: 0.1.0
+Version: 0.1.0.9001
 Date: 2023-12-12
 Authors@R: 
     c(person(given   = "Grant",
@@ -23,7 +23,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: http://grantmcdermott.com/ggfixest/
+URL: https://grantmcdermott.com/ggfixest/
 BugReports: https://github.com/grantmcdermott/ggfixest/issues
 Depends: 
     ggplot2 (>= 2.2.0),
