--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,7 @@ Suggests:
     tinysnapshot (>= 0.0.3),
     magick,
     rsvg,
-    svglite,
+    svglite (>= 2.2.0),
     fontquiver,
     data.table
 VignetteBuilder: knitr
